--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=knowledge
+
+# DashScope AI Configuration
+spring.ai.dashscope.api-key=${DASHSCOPE_API_KEY:your-api-key-here}
+spring.ai.dashscope.chat.options.model=qwen-plus
+
+# File Storage Configuration
+knowledge.storage.directory=${STORAGE_DIR:data/knowledge}
+
+# Python Script Configuration
+# Virtual environment Python path (recommended)
+# macOS/Linux: venv/bin/python3
+# Windows: venv\\Scripts\\python.exe
+knowledge.python.executable=${PYTHON_EXECUTABLE:venv/bin/python3}
+# Script path (relative to project root)
+knowledge.python.script.path=${PYTHON_SCRIPT_PATH:scripts/parse_pdf.py}
+
+# Logging Configuration
+logging.level.ai.innergrow.knowledge=INFO
